--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
